<resources>
    <!-- App Name -->
    <string name="app_name">MaJa Planer</string>

    <string name="beispiel">Beispiel</string>

    <!-- Activity Startbildschirm -->
    <string name="guten">guten</string>
    <string name="gute">gute</string>
    <string name="schoenen">schönen</string>
    <string name="morgen">Morgen.</string>
    <string name="mittag">Mittag.</string>
    <string name="abend">Abend.</string>
    <string name="nacht">Nacht.</string>
    <string name="hallo">Hallo</string>

    <string name="heuteIst">Heute ist der</string>
    <string name="zuEinstellungen">Einstellungen</string>
    <string name="zumStartbildschirm">Home</string>
    <string name="zumKalender">Kalender</string>
    <string name="zuTermineUebersicht">Termine</string>
    <string name="Empty">Empty</string>
    <string name="ganzer">Ganzer\nTag</string>

    <!-- Activity Terminerstellung -->
    <string name="titel">Titel eingeben</string>
    <string name="ganztaegig">Ganzer Tag</string>
    <string name="zeit">Zeit</string>
    <string name="start">Von</string>
    <string name="am">Am</string>
    <string name="ende">Bis</string>
    <string name="datumFormat">tt.mm.yyyy</string>
    <string name="zeitFormat">HH:mm</string>
    <string name="speichern">Speichern</string>
    <string name="abbrechen">Abbruch</string>
    <string name="farbewaehlen">Farbe auswählen</string>
    <string name="notizen">Notizen zum Termin</string>

    <!-- Activity ein Termin -->
    <string name="bearbeiten">Bearbeiten</string>
    <string name="loeschen">Löschen</string>
    <string name="zurueck">Zurück</string>
    <string name="farbe">Farbe</string>
    <string name="keinenotizen">Keine Notizen vorhanden</string>

    <!-- Activity Account_Einloggen -->
    <string name="login">Einloggen</string>
    <string name="nutzername">Nutzername</string>
    <string name="passwort">********</string>
    <string name="passwortvergessen">Passwort vergessen?</string>
    <string name="keinaccount">Noch keinen Account?</string>
    <string name="erstellen">Erstellen</string>
    <string name="einloggen">Einloggen</string>

    <!-- Activity Accounterstellung -->
    <string name="erstellung">Accounterstellung</string>
    <string name="email">E-Mail</string>
    <string name="bereitsaccount">Bereits einen Account?</string>

    <!-- Termin print Text -->
    <string name="terminIstGanztaegig">%1$s findet am %2$s den ganzen Tag lang statt.</string>
    <string name="terminIstNichtGanztaegig">%1$s findet zwischen dem %2$s um %3$s Uhr und dem %4$s um %5$s Uhr statt.</string>
    <string name="terminIstGanztaegigFuerList">Am %2$s ganztägig.</string>
    <string name="terminIstNichtGanztaegigFuerList">Vom %2$s um %3$s Uhr bis zum %4$s um %5$s Uhr.</string>

    <!-- Text für Toast in Terminerstellung -->
    <string name="toastTerminGespeichert">Termin wurde gespeichert</string>
    <string name="toastDatenFalsch">Min. eine Datum- oder Zeitangabe ist falsch!</string>
    <string name="toastTitelFehlt">Bitte Titel eingeben</string>

    <!-- Wochentage für Kalender Activity -->
    <string name="montag">Mo</string>
    <string name="dienstag">Di</string>
    <string name="mittwoch">Mi</string>
    <string name="donnerstag">Do</string>
    <string name="freitag">Fr</string>
    <string name="samstag">Sa</string>
    <string name="sonntag">So</string>

    <!-- Monate für Kalender Activity -->
    <string-array name="monate">
        <item>Januar</item>
        <item>Februar</item>
        <item>März</item>
        <item>April</item>
        <item>Mai</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>August</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Dezember</item>
    </string-array>

    <!-- Farben für ColorPicker -->
    <string name="blaugrau">#394046</string>

    <string-array name="farbenfuercolorpicker">
        <item>#F6402C</item>
        <item>#EB1460</item>
        <item>#9C1AB1</item>
        <item>#6633B9</item>
        <item>#3D4DB7</item>
        <item>#1093F5</item>
        <item>#00A6F6</item>
        <item>#00BBD5</item>
        <item>#009687</item>
        <item>#46AF4A</item>
        <item>#88C440</item>
        <item>#CCDD1E</item>
        <item>#FFEC16</item>
        <item>#FFC100</item>
        <item>#FF9800</item>
        <item>#FF5505</item>
        <item>#7A5547</item>
        <item>#9D9D9D</item>
        <item>#5E7C8B</item>
        <item>#394046</item>
    </string-array>

    <string name="waehlefarbe">Wähle eine Farbe: </string>
</resources>
